cabal-version:       2.4
name:                prelude-x
version:             0.1.0.0
synopsis:            Custom Prelude with functionality I often use
description:         A Prelude based on numhask-prelude, but with some extra exports and utilities
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sasha Boyd
maintainer:          contact@sashaboyd.com
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md

library
  exposed-modules:     Prelude
  default-language:    Haskell2010

  build-depends:       adjunctions
                     , base >=4.14 && <4.15
                     , comonad
                     , containers
                     , distributive
                     , free
                     , newtype ^>= 0.2.2.0
                     , numhask
                     , numhask-prelude
                     , profunctors
                     , recursion-schemes
                     , text
                     , these
                     , wl-pprint-text