cabal-version:       2.4
name:                prelude-x
version:             0.1.0.0
synopsis:            Custom Prelude with functionality I often use
description:         A Prelude based on numhask-prelude, but with some extra exports and utilities
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sasha Boyd
maintainer:          contact@sashaboyd.com
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md

library
  exposed-modules:     Prelude
                     , Test.Common

  default-language:    Haskell2010

  build-depends:       HUnit
                     , QuickCheck
                     , adjunctions
                     , base >=4.14 && <4.15
                     , comonad
                     , containers
                     , data-default-class
                     , distributive
                     , free
                     , hedgehog
                     , hspec
                     , mono-traversable
                     , newtype ^>= 0.2.2.0
                     , numhask ^>= 0.7.0.0
                     , pointed
                     , profunctors
                     , recursion-schemes
                     , semigroupoids
                     , text
                     , these
                     , wl-pprint-text

  default-extensions:  NoImplicitPrelude

  reexported-modules:  Control.Alternative.Free
                     , Control.Applicative
                     , Control.Applicative.Free
                     , Control.Arrow
                     , Control.Category
                     , Control.Comonad
                     , Control.Comonad.Cofree
                     , Control.Comonad.Cofree.Class
                     , Control.Comonad.Env
                     , Control.Comonad.Env.Class
                     , Control.Comonad.Representable.Store
                     , Control.Comonad.Store
                     , Control.Comonad.Store.Class
                     , Control.Comonad.Trans.Coiter
                     , Control.Concurrent
                     , Control.Concurrent.Chan
                     , Control.Concurrent.MVar
                     , Control.Concurrent.QSem
                     , Control.Concurrent.QSemN
                     , Control.Exception
                     , Control.Exception.Base
                     , Control.Monad
                     , Control.Monad.Fail
                     , Control.Monad.Fix
                     , Control.Monad.Free
                     , Control.Monad.Free.Class
                     , Control.Monad.Free.TH
                     , Control.Monad.IO.Class
                     , Control.Monad.Instances
                     , Control.Monad.Representable.Reader
                     , Control.Monad.Representable.State
                     , Control.Monad.ST
                     , Control.Monad.ST.Lazy
                     , Control.Monad.ST.Lazy.Safe
                     , Control.Monad.ST.Lazy.Unsafe
                     , Control.Monad.ST.Safe
                     , Control.Monad.ST.Strict
                     , Control.Monad.ST.Unsafe
                     , Control.Monad.Trans.Iter
                     , Control.Monad.Zip
                     , Control.Newtype
                     , Data.Bifoldable
                     , Data.Bifunctor
                     , Data.Bifunctor.Apply
                     , Data.Bitraversable
                     , Data.Bits
                     , Data.Bool
                     , Data.Char
                     , Data.Coerce
                     , Data.Copointed
                     , Data.Data
                     , Data.Default.Class
                     , Data.Distributive
                     , Data.Distributive.Generic
                     , Data.Dynamic
                     , Data.Either
                     , Data.Eq
                     , Data.Fixed
                     , Data.Foldable
                     , Data.Function
                     , Data.Functor
                     , Data.Functor.Adjunction
                     , Data.Functor.Alt
                     , Data.Functor.Apply
                     , Data.Functor.Base
                     , Data.Functor.Bind
                     , Data.Functor.Bind.Class
                     , Data.Functor.Bind.Trans
                     , Data.Functor.Classes
                     , Data.Functor.Compose
                     , Data.Functor.Composition
                     , Data.Functor.Const
                     , Data.Functor.Contravariant
                     , Data.Functor.Contravariant.Adjunction
                     , Data.Functor.Contravariant.Rep
                     , Data.Functor.Extend
                     , Data.Functor.Foldable
                     , Data.Functor.Foldable.TH
                     , Data.Functor.Identity
                     , Data.Functor.Plus
                     , Data.Functor.Product
                     , Data.Functor.Rep
                     , Data.Functor.Sum
                     , Data.Groupoid
                     , Data.Int
                     , Data.IntMap
                     , Data.IntMap.Lazy
                     , Data.IntMap.Strict
                     , Data.IntSet
                     , Data.Isomorphism
                     , Data.Ix
                     , Data.Kind
                     , Data.List
                     , Data.List.NonEmpty
                     , Data.Map
                     , Data.Map.Lazy
                     , Data.Map.Strict
                     , Data.Maybe
                     , Data.MonoTraversable
                     , Data.Monoid
                     , Data.NonNull
                     , Data.Ord
                     , Data.Pointed
                     , Data.Profunctor
                     , Data.Proxy
                     , Data.Ratio
                     , Data.Semigroup
                     , Data.Semigroup.Bifoldable
                     , Data.Semigroup.Bitraversable
                     , Data.Semigroup.Foldable
                     , Data.Semigroup.Foldable.Class
                     , Data.Semigroup.Traversable
                     , Data.Semigroup.Traversable.Class
                     , Data.Semigroupoid
                     , Data.Semigroupoid.Dual
                     , Data.Semigroupoid.Ob
                     , Data.Semigroupoid.Static
                     , Data.Sequence
                     , Data.Sequences
                     , Data.Set
                     , Data.String
                     , Data.Text
                     , Data.Text.IO
                     , Data.Text.Lazy
                     , Data.Text.Lazy.IO
                     , Data.Text.Read
                     , Data.These
                     , Data.These.Combinators
                     , Data.Traversable
                     , Data.Traversable.Instances
                     , Data.Tree
                     , Data.Tuple
                     , Data.Type.Bool
                     , Data.Type.Coercion
                     , Data.Type.Equality
                     , Data.Typeable
                     , Data.Unique
                     , Data.Version
                     , Data.Void
                     , Data.Word
                     , Debug.Trace
                     , GHC.Show as Show
                     , Hedgehog
                     , Hedgehog.Gen
                     , Hedgehog.Main
                     , Hedgehog.Range
                     , NumHask.Algebra.Additive as Algebra.Additive
                     , NumHask.Algebra.Field as Algebra.Field
                     , NumHask.Algebra.Group as Algebra.Group
                     , NumHask.Algebra.Lattice as Algebra.Lattice
                     , NumHask.Algebra.Module as Algebra.Module
                     , NumHask.Algebra.Multiplicative as Algebra.Multiplicative
                     , NumHask.Algebra.Ring as Algebra.Ring
                     , NumHask.Analysis.Metric as Analysis.Metric
                     , NumHask.Data.Complex as Data.Complex
                     , NumHask.Data.Integral as Data.Integral
                     , NumHask.Data.LogField as Data.LogField
                     , NumHask.Data.Positive as Data.Positive
                     , NumHask.Data.Rational as Data.Rational
                     , NumHask.Data.Wrapped as Data.Wrapped
                     , NumHask.Exception
                     , NumHask.Prelude
                     , Numeric.Natural
                     , System.Environment
                     , System.Environment.Blank
                     , System.Exit
                     , System.IO
                     , System.IO.Error
                     , System.IO.Unsafe
                     , System.Info
                     , System.Mem
                     , System.Mem.StableName
                     , System.Mem.Weak
                     , System.Posix.Types
                     , System.Timeout
                     , Test.HUnit
                     , Test.HUnit.Base
                     , Test.HUnit.Lang
                     , Test.HUnit.Terminal
                     , Test.HUnit.Text
                     , Test.Hspec
                     , Test.Hspec.Discover
                     , Test.Hspec.Formatters
                     , Test.Hspec.QuickCheck
                     , Test.Hspec.Runner
                     , Test.QuickCheck
                     , Test.QuickCheck.All
                     , Test.QuickCheck.Arbitrary
                     , Test.QuickCheck.Exception
                     , Test.QuickCheck.Features
                     , Test.QuickCheck.Function
                     , Test.QuickCheck.Gen
                     , Test.QuickCheck.Gen.Unsafe
                     , Test.QuickCheck.Modifiers
                     , Test.QuickCheck.Monadic
                     , Test.QuickCheck.Poly
                     , Test.QuickCheck.Property
                     , Test.QuickCheck.Random
                     , Test.QuickCheck.State
                     , Test.QuickCheck.Test
                     , Test.QuickCheck.Text
                     , Text.PrettyPrint.Leijen.Text
                     , Text.PrettyPrint.Leijen.Text.Monadic
                     , Text.Printf
                     , Text.Read
                     , Text.Read.Lex
                     , Text.Show
                     , Text.Show.Functions
                     , Type.Reflection
                     , Type.Reflection.Unsafe
                     , Unsafe.Coerce